# liblist

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  example.c
src/lib/: Makefile.am  list.c  list.h
